fix(server): setup spring configs to get the server to boot